<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Liniowy"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/opis_cisnienie"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/opis_cisnienie"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="28sp"
            android:textColor="@color/kolor_opisu"/>

        <EditText
            android:id="@+id/wartosc_cisnienia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:ems="10"
            android:inputType="text"
            android:text="@string/cisnienie" />

        <TextView
            android:id="@+id/opis_swiatlo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.01"
            android:text="@string/opis_swiatlo"
            android:textSize="28sp"
            android:textColor="@color/kolor_opisu"/>

        <EditText
            android:id="@+id/wartosc_swiatlo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:ems="10"
            android:inputType="text"
            android:text="@string/swiatlo" />

        <TextView
            android:id="@+id/opis_temperatura"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.01"
            android:text="@string/opis_temperatura"
            android:textSize="28sp"
            android:textColor="@color/kolor_opisu"/>

        <EditText
            android:id="@+id/wartosc_temperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:ems="10"
            android:inputType="text"
            android:text="@string/temperatura" />
        <TextView
            android:id="@+id/opis_wilgotnosc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opis_wilgotnosc"
            android:textSize="28sp"
            android:textColor="@color/kolor_opisu"/>

        <EditText
            android:id="@+id/wartosc_wilgotnosc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:ems="10"
            android:inputType="text"
            android:text="@string/wilgotnosc" />

        <TextView
            android:id="@+id/opis_punkt_rosy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opis_punkt_rosy"
            android:textSize="28sp"
            android:textColor="@color/kolor_opisu"/>

        <EditText
            android:id="@+id/wartosc_punkt_rosy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:ems="10"
            android:inputType="text"
            android:text="@string/punkt_rosy" />

        <TextView
            android:id="@+id/opis_wilgotnosc_bezwzgledna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opis_wilgotnosc_bezwzgledna"
            android:textSize="28sp"
            android:textColor="@color/kolor_opisu"/>

        <EditText
            android:id="@+id/wartosc_wilgotnosc_bezwzgledna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:ems="10"
            android:inputType="text"
            android:text="@string/wilgotnosc_bezwzgledna" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>